<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="180"
        android:entries="@array/pref_feelings_titles"
        android:entryValues="@array/pref_feelings"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_feelings" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="text_pressure"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_pressure" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="text_tempreture"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_tempreture" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="text_weight"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_weight" />

    <EditTextPreference
        android:capitalize="words"
        android:enabled="false"
        android:inputType="textCapWords"
        android:key="text_bmi"
        android:maxLines="0"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_bmi" />

</PreferenceScreen>
