<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ania.monitorzdrowia.MyData">



    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/age"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText2"
            android:layout_alignStart="@+id/editText2"
            android:layout_below="@+id/editText2"
            android:layout_marginTop="41dp"
            android:editable="false"
            android:ems="10"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:text="@string/sex" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText7"
            android:layout_alignLeft="@+id/editText7"
            android:layout_alignStart="@+id/editText7"
            android:layout_alignRight="@+id/editText7"
            android:layout_alignEnd="@+id/editText7" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/height"
            android:layout_below="@+id/editText7"
            android:layout_alignLeft="@+id/editText7"
            android:layout_alignStart="@+id/editText7" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="79dp"
            android:text="@string/save"
            android:layout_below="@+id/editText3"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
